--- a/hotel/Css/index.css
+++ b/hotel/Css/index.css
@@ -25,6 +25,17 @@ input {
     border-radius: 4px;
 }
 
+.drop-select {
+    padding: 6px 8px;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+.date-select {
+    padding: 6px 8px;
+    border: 1px solid black;
+    border-radius: 4px;
+}
 
 a {
     text-decoration: none;
@@ -216,7 +227,7 @@ table {
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow: hidden;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -224,7 +235,7 @@ table {
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 5% auto; /* 15% from the top and centered */
     padding: 0;
     border: 1px solid #888;
     border-radius: 12px;
@@ -256,6 +267,8 @@ table {
     width: 100%;
     background-color: white;
     padding: 2px 16px;
+    max-height: 500px;
+    overflow-y: auto;
 }
 
 /* Modal Footer */
@@ -337,4 +350,18 @@ table {
         top: 0;
         opacity: 0;
     }
+}
+
+
+.dashboard {
+    padding: 100px 80px;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 50px 20px;
+}
+
+.dashboard-item {
+    height: 200px;
+    padding: 10px 20px;
+    border-radius: 12px;
 }
