--- a/hotel/CMSLayout.Master
+++ b/hotel/CMSLayout.Master
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="Css/index.css" rel="stylesheet" />
+    <style>
+        .login-name {
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -51,7 +56,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                       <%-- <li>
                             <a href="../Admin/Dashboard.aspx">
                                 <i class='bx bx-food-menu'></i>
                                 <span>Quản lý dịch vụ</span>
@@ -62,13 +67,16 @@
                                 <i class='bx bxs-file-doc'></i>
                                 <span>Báo cáo</span>
                             </a>
-                        </li>
+                        </li>--%>
 
                     </ul>
                 </div>
+                <div>
+                    <asp:Button type="button" runat="server" ID="btnLogout" OnClick="onLogout" Text="Đăng xuất" CssClass="btn-logout"/>
+                </div>
             </div>
             <div class="navbar">
-                <asp:Label runat="server">Admin</asp:Label>
+                <asp:LoginName ID="LoginName1" runat="server" Font-Bold = "true" CssClass="login-name"/>
             </div>
             <div class="content">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
