--- a/hotel/Css/index.css
+++ b/hotel/Css/index.css
@@ -43,6 +43,20 @@ a {
     display: inline-flex;
 }
 
+.btn-logout {
+    position: absolute;
+    bottom: 10px;
+    left: 20px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+    border: 1px solid white;
+    background: #1A1919;
+}
+
+
 .container {
     height: 100vh;
     max-height: 100vh;
